src/main/java/com/example/integradora5d/error/errorTypes/CustomNotContentException.java
package com.example.integradora5d.error.errorTypes;

public class CustomNotContentException extends Exception{
    public CustomNotContentException(String message) {
        super(message);
    }
}
